--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
 }
 html{
    width: 100%;
-   height:150vh; 
+   height:100vh; 
 }
 body{
     width: 100%;
-    height:150vh;
+    height:100vh;
     background-color:hsl(233, 47%, 7%);
     text-align: center;
 }
@@ -90,9 +90,7 @@ span{
    filter: hue-rotate(80deg) brightness(80%);
    background: linear-gradient( rgba(0,130,170,.5),rgba(0,130,170,.5)), url("https://github.com/zaklinaradivojevic/Stats-preview-card-component/blob/main/images/image-header-desktop.jpg?raw=true" );
  }
- 
-    
-    
+   
 .attribution {
     font-size: 11px;
     text-align: center;
@@ -101,4 +99,107 @@ span{
 
   .attribution a {
     color: hsl(228, 45%, 44%);
+  }
+  @media only screen and (max-width: 375px) {
+    body {
+        width: 100%;
+        height:100vh;
+       }
+       .container{
+        margin-top: 15%;
+        margin-left: 15%;
+        margin-right: 15%;
+        margin-bottom: 15%;
+        width: 250px;
+        height:100vh;
+        position: relative;
+        border-radius: 15px;
+      }
+    .card-content{
+        top:30%;
+        width: 100%;
+        height:510px;
+        background-color:hsl(244, 38%, 16%);
+        position: absolute;
+        text-align: center;
+        float: none;
+       
+    }
+    .card-title{
+        margin-top: 15%;
+        margin-left:10%;
+        width: 190px;
+        color: hsl(0, 0%, 100%); 
+        font-size: 11px;
+        font-weight: 500;
+        font-family: 'Inter', sans-serif;
+    }
+    span{
+        color: hsl(277, 64%, 61%);
+    }
+    .card-text{
+        margin-top: 5%;
+        margin-left:15%; 
+        width: 70%;
+        color: hsla(0, 0%, 100%, 0.75) ;  
+        text-align: center;
+        font-size: 13px;
+        line-height: 20px;
+        font-family: 'Lexend Deca', sans-serif;
+    }
+    .card-desc{
+       width: 50%;
+       height:auto;
+       margin-top:30px;
+       margin: 0 auto; 
+       padding:20px;
+       margin-bottom: 30px;
+       display: flex;
+       flex-wrap: wrap;
+    }
+    .card-desc h1{
+        margin-top:20px;
+        color: hsl(0, 0%, 100%);
+        font-size: 20px;
+        font-weight: 700;
+        font-family: 'Inter', sans-serif;
+        
+     }
+     .card-desc p{
+          margin-top:35px;
+        color: hsla(0, 0%, 100%, 0.75); 
+         text-transform: uppercase;
+         font-size:11px;
+         font-family: 'Lexend Deca', sans-serif;
+    
+     }
+     .card-sub-desc{
+        width: 50%;
+         margin-top:9%; 
+        margin-left: 10px;
+        color: hsla(0, 0%, 100%, 0.75); 
+        position: absolute;
+        display: flex;
+        flex-wrap: wrap;
+    
+     }
+     .card-img{
+        width: 100%;
+        height:216px;
+       float: none;
+       border-top-right-radius: 10px;
+       border-top-left-radius: 10px;
+       filter: hue-rotate(80deg) brightness(80%);
+      background: linear-gradient( rgba(0,130,170,.5),rgba(0,130,170,.5)), url("https://github.com/zaklinaradivojevic/Stats-preview-card-component/blob/main/images/image-header-desktop.jpg?raw=true" );
+     }
+       
+    .attribution {
+        font-size: 11px;
+        text-align: center;
+        color: white;
+      }
+    
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
   }
