--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ span{
   @media only screen and (max-width: 375px) {
     body {
         width: 100%;
-        height:100vh;
+        height:130vh;
        }
        .container{
         margin-top: 15%;
@@ -185,18 +185,20 @@ span{
      }
      .card-img{
         width: 100%;
-        height:216px;
+        height:217px;
        float: none;
        border-top-right-radius: 10px;
        border-top-left-radius: 10px;
        filter: hue-rotate(80deg) brightness(80%);
-      background: linear-gradient( rgba(0,130,170,.5),rgba(0,130,170,.5)), url("https://github.com/zaklinaradivojevic/Stats-preview-card-component/blob/main/images/image-header-desktop.jpg?raw=true" );
+      background: linear-gradient( rgba(0,130,170,.5),rgba(0,130,170,.5)), url("https://github.com/zaklinaradivojevic/Stats-preview-card-component/blob/main/images/image-header-mobile.jpg?raw=true" );
      }
        
     .attribution {
+         top:820px;
         font-size: 11px;
         text-align: center;
         color: white;
+      position:absolute;
       }
     
       .attribution a {
